--- a/views/login.pug
+++ b/views/login.pug
@@ -4,7 +4,7 @@ block content
   h1= title
   p Login
 
-  form(method='post' action='/login')
+  form(method='POST' action='/login')
     label Username:
     input(type="text" name="username")
     label Password:
