--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,4 +4,8 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    a(href='/login') login
+    br
+    a(href='/logout') logout
     block content
+
